# apoc

./: .gitignore  CMakeLists.txt  OasisOLC_2.0.6_for_Circle3.1.readme
lib/etc/: time
lib/misc/: socials.new
lib/world/wld/: 12.wld
src/: config.c  interpreter.c
